# sly_physics

./: .gitignore  Cargo.toml  README.md  meta.json  notes.md
benches/: stack.rs
examples/: aabb.rs  aabb.wgsl  aabb_instancing.rs  box.rs  bvh_debug.rs  constraint_mover.rs  constraints.rs  gjk_error.rs  gravity.rs  main.rs  motor.rs  stack.rs
examples/helper/: assets.rs  interaction_menu_overlay.rs  mod.rs  overlay.rs  picking.rs  text_overlay.rs
src/: broad.rs  bvh.rs  colliders.rs  damping.rs  debug.rs  drag.rs  gravity.rs  lib.rs  narrow.rs  ray.rs  resolve.rs  rigid_body.rs  tasks.rs  tlas.rs  tri.rs  types.rs  utils.rs
src/aabb/: debug_render.rs  debug_render_pulling.rs  mod.rs
src/bvh/: bvh.rs  mod.rs  ray.rs  tlas.rs  tri.rs
src/colliders/: box.rs  convex.rs  convex_hull.rs  cube.rs  mod.rs  sphere.rs
src/constraints/: constant_velocity_constrant.rs  constraint_distance.rs  constraint_hinge_quat.rs  constraint_motor.rs  constraint_mover.rs  constraint_orientation.rs  constraint_penetration.rs  contact_arena.rs  contact_constraint.rs  contact_manifold.rs  distance.rs  distance_constraint.rs  hinge_constraint.rs  hinge_limited_constraint.rs  hinge_quat_constraint.rs  hinge_quat_limited_constraint.rs  manifold.rs  mod.rs  motor_constraint.rs  orientation.rs  orientation_constraint.rs  penetration_manifold.rs
src/debug/: bvh_aabb.rs  bvh_aabb.wgsl  bvh_camera.rs  constraints.rs  constraints.wgsl  contacts.rs  contacts.wgsl  entity_aabb.rs  entity_aabb.wgsl  mod.rs
src/dynamics/: drag.rs  gravity.rs  mod.rs
src/intersect/: gjk.rs  mod.rs  sphere.rs
src/math/: glam_ext.rs  matrix.rs  mod.rs  vector.rs
src/phases/: broad.rs  dynamics.rs  mod.rs  narrow.rs  resolve.rs
src/types/: aabb.rs  mod.rs
tests/: gjk.rs  sphere.rs
tools/meshdata/: Cargo.toml
tools/meshdata/src/: main.rs
