[package]
name = "sly_physics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["continuous"]
discrete = []
continuous = []
trace = ["bevy/trace", "bevy/trace_chrome"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.8.0" }
bevy-inspector-egui = { version = "0.12.1" }
iyes_loopless = { version = "0.7.0" }

[dev-dependencies]
bevy-inspector-egui = "0.12.1"
sly_camera_controller = { git = "https://github.com/slyedoc/sly_camera_controller", branch = "main" }

[[example]]
name = "stack"
crate-type = ["bin"]

# [dev-dependencies]
# bevy = "0.7.0"
# rand = "0.8.5"