[package]
name = "sly_physics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A native physics engine for Bevy"
readme = "README.md"
repository = "https://github.com/slyedoc/sly_physics"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["continuous"]
discrete = []
continuous = []
step = []
trace_tracy = ["bevy/trace_tracy"]
trace = ["bevy/trace", "bevy/trace_chrome"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.8.0" }
bevy-inspector-egui = { version = "0.12.0" }
iyes_loopless = { version = "0.7.0" }
bytemuck = "1.12.1"

[dev-dependencies]
sly_camera_controller = { git = "https://github.com/slyedoc/sly_camera_controller", branch = "main" }
criterion = { version = "0.3", features = ["html_reports"] }
image = "0.24" # only used for criterian debugging

[[example]]
name = "main"
path = "examples/main.rs"

[[example]]
name = "stack"
path = "examples/stack.rs"


[[bench]]
name = "stack"
harness = false